user/themes/longread/scss/hover-effects.scss
/* https://tympanus.net/codrops/2014/06/19/ideas-for-subtle-hover-effects/ */
@import "vendor/bourbon/bourbon";

$red: #E00000;
$dark-red: #C70000;

/* Common style */
.hover-grid figure {
  position: relative;
  overflow: hidden;
}

.hover-grid figure img {
  position: relative;
  display: block;
  min-height: 100%;
  max-width: 100%;
  opacity: 0.8;
}

.hover-grid figure figcaption {
  // padding: 2em;
  color: #fff;
  text-transform: uppercase;
  font-size: 1.25em;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.hover-grid figure figcaption::before,
.hover-grid figure figcaption::after {
  pointer-events: none;
}

.hover-grid figure figcaption,
.hover-grid figure figcaption > a {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* Anchor will cover the whole item by default */
/* For some effects it will show as a button */
.hover-grid figure figcaption > a {
  z-index: 1000;
  text-indent: 200%;
  white-space: nowrap;
  font-size: 0;
  opacity: 0;
}

.hover-grid figure h2,
.hover-grid figure p {
  margin: 0;
}

.hover-grid figure p {
  letter-spacing: 1px;
  font-size: 68.5%;
}

/* Individual effects */

/*---------------*/
/***** Honey *****/
/*---------------*/

figure.effect-honey {
  // background: $red;
  // @include linear-gradient(to bottom, rgba(199, 0, 0, 0.1), $dark-red);
  @include linear-gradient(to bottom, rgba(30, 0, 0, 1), $dark-red);
}

figure.effect-honey img {
  opacity: 1;
  -webkit-transition: opacity 0.35s;
  transition: opacity 0.35s;
}

figure.effect-honey:hover:not(.disabled) img {
  opacity: 0.4;
}

figure.effect-honey figcaption::before {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 5px;
  background: $red;
  content: '';
  -webkit-transform: translateY(-5px);
  transform: translateY(-5px);
}

figure.effect-honey h2 {
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 10px 15px;
  font-size: 36px;
  line-height: 36px;
  text-align: left;
  -webkit-transform: translateY(-15px);
  transform: translateY(-15px);
}

figure.effect-honey figcaption::before,
figure.effect-honey h2 {
  -webkit-transition: -webkit-transform 0.35s;
  transition: transform 0.35s;
}

figure.effect-honey:hover:not(.disabled) figcaption::before,
figure.effect-honey:hover:not(.disabled) h2{
  opacity: 1;
  -webkit-transform: translateY(0);
  transform: translateY(0);
}

// @media screen and (max-width: 50em) {
//  .content {
//    padding: 0 10px;
//    text-align: center;
//  }
//  .hover-grid figure {
//    display: inline-block;
//    float: none;
//    margin: 10px auto;
//    width: 100%;
//  }
// }

